# brisa01

./: Cargo.toml  LICENSE
src/: channel.rs  main.rs
src/bot/: mod.rs
src/webserver/: mod.rs
src/webserver/static/: index.html  script.js  style.css
src/websocket/: mod.rs
