[package]
name = "brisa01"
version = "0.1.0"
authors = ["LuckShiba"]
edition = "2018"


[dependencies]
nickel = "^0.11.0"
multipart= { version = "^0.17.1", features = ["server", "nickel"] }
ws = "^0.9.1"
serenity = { version = "^0.10.7", features = [ "builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend" ], default-features = false }
tokio = { version = "^1.6.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "^1.0.126", features = ["derive"] }
serde_json = "^1.0.64"
dotenv = "^0.15.0"
